🔧 Fix Rust compilation issues and HTML parsing
- Fixed HTML parsing error by escaping < character in option text
- Removed unused imports to eliminate compiler warnings
- Fixed type mismatch in app initialization function
- Created placeholder icon files for Tauri requirements
- Cleaned up variable naming to avoid unused warnings

The Tauri app now compiles successfully and the translucent UI loads properly.
Frontend development server runs without errors on localhost:1420.

--- a/tauri-app/index.html
+++ b/tauri-app/index.html
@@ -48,7 +48,7 @@
                 <label>🎯 Filter:</label>
                 <select id="filter-select">
                     <option value="all">All Models</option>
-                    <option value="recent">Recently Used (< 2 weeks)</option>
+                    <option value="recent">Recently Used (&lt; 2 weeks)</option>
                     <option value="moderate">Moderately Used (2-4 weeks)</option>
                     <option value="old">Old Models (1+ month)</option>
                     <option value="starred">⭐ Starred Models</option>
